Fixing stupid camera clipping

--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,7 @@ canvas {
 }
 
 body {
-	margin: 0;
+	margin: 0 px;
+	overflow: hidden;
 }
+
